force-app/main/default/objects/Integration_Biomarker__c/Integration_Biomarker__c.object-meta.xml
<CustomObject>
    <label>Integration Biomarker</label>
    <nameField>
        <displayFormat>IB-{00000000}</displayFormat>
        <label>Integration Biomarker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Biomarkers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>