force-app/main/default/objects/Integration_Biomarker__c/fields/Assessed_On__c.field-meta.xml
<CustomField>
    <fullName>Assessed_On__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assessed On</label>
    <type>DateTime</type>
</CustomField>