force-app/main/default/objects/Integration_Biomarker__c/fields/Biomarker_Error__c.field-meta.xml
<CustomField>
    <fullName>Biomarker_Error__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Biomarker Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>