force-app/main/default/objects/Integration_Biomarker__c/fields/BiomarkerVendorReachoutStatus__c.field-meta.xml
<CustomField>
    <fullName>BiomarkerVendorReachoutStatus__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Biomarker Vendor Reachout Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>