force-app/main/default/objects/Integration_Biomarker__c/fields/Data_JSON1__c.field-meta.xml
<CustomField>
    <fullName>Data_JSON1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data JSON1</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>