force-app/main/default/objects/Integration_Biomarker__c/fields/Result_JSON2__c.field-meta.xml
<CustomField>
    <fullName>Result_JSON2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Result JSON2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>