force-app/main/default/objects/Integration_Biomarker__c/fields/Vendor_Source__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Source__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vendor/Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>